--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "mysql2": "^2.1.0",
-    "typescript": "^4.0.2"
+    "typescript": "3.9.7"
   }
 }
