--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "mysql2": "^2.1.0",
+    "nodemon": "^2.0.4",
     "typescript": "3.9.7"
   }
 }
