--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon",
+    "build": "tsc",
+    "start:production": "node ./dist/server.js"
   },
   "repository": {
     "type": "git",
