--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "morgan": "^1.10.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
+    "@types/morgan": "^1.9.1",
     "@types/sequelize": "^4.28.9",
     "eslint": "^7.9.0",
     "eslint-config-airbnb-base": "^14.2.0",
